<resources>
    <string name="app_name">Tank Datenbank</string>
    <string name="drawer_open">Öffnen</string>
    <string name="drawer_close">Schließen</string>
    <string name="new_vehicle">Neues Fahrzeug</string>
    <string name="my_vehicles">Meine Fahrzeuge</string>
    <string name="save">Speichern</string>
    <string name="vehicle_name">Fahrzeug Name</string>
    <string name="millage">Kilometerstand</string>
    <string name="invalid_inputs">Ungültie Eingaben</string>
    <string name="edit">Bearbeiten</string>
    <string name="total_millage_driven">Total %s km Gefahren</string>
    <string name="total_liter">Insgesamt %s l getankt</string>
    <string name="total_price_paid">Insgesamt %s € bezahlt</string>
    <string name="average_price">Durchschnitts Preis %s €</string>
    <string name="statistic">Statistik</string>
    <string name="date">Datum</string>
    <string name="gasstation">Tankstelle</string>
    <string name="liter">Liter</string>
    <string name="prize_liter">Preis/Liter</string>
    <string name="prize">Preis</string>
    <string name="no_vehicle_chosen">Kein Fahrzeug ausgewählt</string>
    <string name="no_vehicle">Du musst erst ein Fahrzeug erstellen.</string>
    <string name="prize_per_year">€ pro Jahr</string>
    <string name="delete">Löschen</string>
    <string name="delete_for_sure">Wirklich löschen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="prize_with_currency">%s €</string>
    <string name="prize_liter_with_currency">%s €/l</string>
    <string-array name="months">
        <item>Januar</item>
        <item>Februar</item>
        <item>März</item>
        <item>April</item>
        <item>Mai</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>August</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Dezember</item>
    </string-array>
</resources>
