<LinearLayout
    android:visibility="gone"
    android:id="@+id/vehicle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/total_milage_driven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/total_milage_driven"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/total_liter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/total_liter"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/total_paid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/total_price_paid"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/average_prize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/average_price"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_gravity="center_horizontal"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/statistic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/statistic" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add" />
    </FrameLayout>
</LinearLayout>